popravio bug u makefileu i swwrapperu

--- a/src/util/Makefile
+++ b/src/util/Makefile
@@ -1,2 +1,4 @@
+all: SmithWaterman.o
+
 SmithWaterman.o : SmithWaterman.cpp SmithWaterman.h
-	$(GXX) -o SmithWaterman.o SmithWaterman.cpp
+	$(GXX) -c SmithWaterman.cpp -o SmithWaterman.o $(FLAGS)
