popravak malih bugova

--- a/src/mappers/Makefile
+++ b/src/mappers/Makefile
@@ -1,7 +1,10 @@
 all: simpleHashingMapper
 
-SimpleHashingMapper.o: SimpleHashingMapper.cpp
-	$(GXX) $(FLAGS) -c SimpleHashingMapper.cpp -o SimpleHashingMapper.o
-
-simpleHashingMapper: SimpleHashingMapper.o
-	$(GXX) $(FLAGS) -o simpleHashingMapper SimpleHashingMapper.o
+simpleHashingMapper: SimpleHashingMapper.cpp
+	g++ $(INCLUDES) $(OBJECTS) \
+	-L$(PREFIX)/external/swSharp/lib \
+	-lswsharp \
+	-L/usr/local/cuda/lib64 -lcuda -lcudart \
+	-o simpleHashingMapper \
+		../util/SmithWaterman.o \
+		SimpleHashingMapper.cpp
