--- a/src/util/Makefile
+++ b/src/util/Makefile
@@ -2,8 +2,8 @@ all: SmithWaterman.o
 
 SmithWaterman.o : SmithWaterman.cpp SmithWaterman.h
 	$(GXX) $(INCLUDES)  \
-		-L$(PREFIX)/external/swSharp/lib\
-		-lswsharp \
 		-static \
 		-o SmithWaterman.o \
-		-c SmithWaterman.cpp 
+		-c \
+		$(PREFIX)/external/swSharp/lib/libswsharp.a \
+		SmithWaterman.cpp 
