--- a/src/mappers/Makefile
+++ b/src/mappers/Makefile
@@ -1,4 +1,4 @@
-all: simpleHashingMapper
+all: simpleHashingMapper FMindexMapper
 
 simpleHashingMapper: SimpleHashingMapper.cpp ../util/SmithWaterman.o
 	g++ $(INCLUDES)\
@@ -9,3 +9,15 @@ simpleHashingMapper: SimpleHashingMapper.cpp ../util/SmithWaterman.o
 		../util/SmithWaterman.o \
 		$(PREFIX)/external/swSharp/lib/libswsharp.a \
 		SimpleHashingMapper.cpp -g -ggdb
+
+FMindexMapper: FMindexMapper.cpp ../util/SmithWaterman.o
+	g++ $(INCLUDES)\
+	-L/usr/local/cuda/lib64 -lcuda \
+	-L/usr/local/cuda/lib64	-lcudart \
+	-L$(PREFIX)/external/swSharp/lib -lswsharp \
+	-o FMindexMapper \
+		../util/SmithWaterman.o \
+		../FMindex/*.o \
+		../FMindex/Opp/*.o \
+		$(PREFIX)/external/swSharp/lib/libswsharp.a \
+		FMindexMapper.cpp -g -ggdb
