Napravio clean za makefileove, prva prazna verzija mappera radi

--- a/src/mappers/Makefile
+++ b/src/mappers/Makefile
@@ -21,3 +21,6 @@ FMindexMapper: FMindexMapper.cpp ../util/SmithWaterman.o
 		../FMindex/Opp/*.o \
 		$(PREFIX)/external/swSharp/lib/libswsharp.a \
 		FMindexMapper.cpp -g -ggdb
+
+clean:
+	\rm simpleHashingMapper FMindexMapper
