Jos malo uredio

--- a/src/FMindex/Makefile
+++ b/src/FMindex/Makefile
@@ -1,5 +1,5 @@
 CPP = g++
-FLAGS =
+FLAGS = -O2
 
 FMINDEX_OBJ = FMindex.o RTQRTree.o Trie.o StringView.o
 OPP_OBJ = Opp/Opp.o Opp/OppRows.o Opp/Compressor.o Opp/Alphabet.o Opp/BitArray.o
